# SystemForge-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  .pyre_configuration  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  make_commits.py  pyproject.toml  strip.py  test_systemforge.db
backend/: .coverage  .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  test_systemforge.db
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_realtime_messaging_phase1.py  0003_outbox_relay_hardening.py  0004_realtime_messaging_indexes.py  (+11 more)
backend/app/: main.py
backend/scripts/: __init__.py  migrate.sh  seed_demo.py
backend/tests/: conftest.py  test_abuse_analytics_service.py  test_ai_analysis.py  test_api_flows.py  test_auth_security.py  test_config_validation.py  test_consistency.py  test_delivery_worker.py  test_design_version_service.py  test_exports.py  test_generation_service.py  test_live_cost_service.py  test_mermaid_render.py  test_mermaid_sanitize.py  test_mermaid_validate.py  test_notification_service.py  test_openapi_export_contract.py  test_outbox_relay_stream_routing.py  test_output_finalize.py  test_presence_service.py  test_rate_limiter.py  test_rbac.py  test_realtime_happy_path_integration.py  test_realtime_messaging_flow.py  test_realtime_pipeline.py  test_scaffold_service.py  test_terraform_service.py  test_version_export_integration.py  test_workspace_cascade.py  test_workspace_service.py
(+243 files in other folders)
