[project]
name = "systemforge-backend"
version = "0.1.0"
description = "SystemForge AI Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy>=2.0.46,<3",
    "psycopg[binary]==3.2.13",
    "pydantic>=2.11.0,<3",
    "pydantic-settings>=2.8.0,<3",
    "email-validator==2.2.0",
    "PyJWT>=2.10.1",
    "bcrypt==4.0.1",
    "passlib[bcrypt]==1.7.4",
    "python-multipart>=0.0.20",
    "redis==5.2.1",
    "httpx==0.28.1",
    "fpdf2==2.8.2",
    "alembic==1.18.4",
    "sentry-sdk[fastapi]==2.19.2",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-redis>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.4.8",
    "pyre-check",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app"]
